@@ -1,5 +1,6 @@
-Alpha 6.1.1
+Alpha 6.1.1 - 15th August 2021
 
+- Fix for a bug where rations where often being lost while a dwarf attempted to eat them, they will be a bit more careful with their food now
 - Fix for crash when clicking around after starting settlement spawn
 
 Alpha 6.1 - 12th August 2021
